--- a/admin.html
+++ b/admin.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Admin Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Admin Panel</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
 <div class="container py-5">
 
-    <div id="loginBox" class="card mx-auto p-4" style="max-width:400px;">
-        <h4 class="text-center mb-3">Admin Login</h4>
-        <input id="username" class="form-control mb-2" placeholder="Username">
-        <input id="password" type="password" class="form-control mb-3" placeholder="Password">
-        <button class="btn btn-dark w-100" onclick="login()">Login</button>
-    </div>
+  <div id="loginBox" class="card p-4 mx-auto" style="max-width:400px;">
+    <h4 class="text-center mb-3">Admin Login</h4>
+    <input id="user" class="form-control mb-2" placeholder="Username">
+    <input id="pass" type="password" class="form-control mb-3" placeholder="Password">
+    <button class="btn btn-dark w-100" onclick="login()">Login</button>
+  </div>
 
-    <div id="adminPanel" style="display:none;">
-        <h3>Admin Panel</h3>
+  <div id="panel" style="display:none;">
+    <h3>Manage Products</h3>
 
-        <input id="productName" class="form-control mb-2" placeholder="Product name">
-        <input id="productPrice" class="form-control mb-2" placeholder="Price">
-        <button class="btn btn-success mb-3" onclick="addProduct()">Add Product</button>
+    <input id="pname" class="form-control mb-2" placeholder="Product name">
+    <input id="pprice" class="form-control mb-2" placeholder="Price">
+    <input id="pimg" class="form-control mb-3" placeholder="Image URL or path">
 
-        <ul id="adminProducts" class="list-group"></ul>
-    </div>
+    <button class="btn btn-success mb-4" onclick="addProduct()">Add Product</button>
+
+    <ul id="productList" class="list-group"></ul>
+  </div>
 
 </div>
 
